# cpp-modules-bootstrap

./: CMakeLists.txt  Hello.cppm  HelloImpl.cppm  Makefile  cmake-setup.sh  main.cpp
example-correct-implementation-partitions/: Hello.cpp  HelloImpl.cppm  Makefile  main.cpp
make-clang-warnings-happy/: Hello.cppm
